# graphics-n-stuff

./: .gitignore  README.md  meson.build
inc/: window.h
inc/fractal/: app.hpp
inc/fractal-mp/: app.hpp  pch.hpp
inc/pch/: pch.hpp
inc/ps11/: app.hpp  backend-egl.hpp  backend.hpp  part-6502.hpp  part-rasterization.hpp  part-sap.hpp  pch.hpp  utility.hpp
inc/raytracer/: hittable.hpp  hittable_list.hpp  pch.hpp  ray.hpp  sphere.hpp  types.hpp
inc/raytracer-new/: app.hpp  pch.hpp
inc/sap/: app.hpp  backend-egl.hpp  backend-shm.hpp  backend.hpp  pch.hpp  utility.hpp
samples/6502/: fibo.a65  loop.a65  one.a65  two.a65
src/: window.c  window.cpp
src/bouncing-ball/: app.inl
src/cloth/: app.inl  cloth.cpp
src/cloth-new/: app.inl
src/fractal/: main.cpp
src/fractal-mp/: main.cpp
src/graph/: app.inl  main.cpp
src/heart/: app.inl
src/offscreen/: app.inl  offscreen.cpp
src/pendulum/: app.inl
src/pong/: main.cpp
src/ps11/: 6502.ini  main.cpp
src/raytracer/: main.cpp
src/raytracer-new/: main.cpp
src/sap/: main.cpp
src/ttt/: main.cpp
src/two-pendulum/: app.inl
src/wayland/: xdg-shell.c
src/window/: app.inl
src/window-lamp/: app.inl  window.cpp
